--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-    "name": "Pikku",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -20,8 +19,19 @@
     },
     "homepage": "https://github.com/JayJayc/Pikku#readme",
     "dependencies": {
-        "next": "^9.3.3",
+        "apollo-server-express": "^2.12.0",
+        "cors": "^2.8.5",
+        "graphql": "^15.0.0",
+        "graphql-iso-date": "^3.6.1",
+        "graphql-type-json": "^0.3.1",
+        "mongodb": "^3.5.6",
+        "mongoose": "^5.9.10",
+        "next": "^9.0.4",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "serverless-nextjs-plugin": "^2.4.9"
+    },
+    "devDependencies": {
+        "serverless-next.js": "^1.9.8"
     }
 }
