--- a/package.json
+++ b/package.json
@@ -19,16 +19,27 @@
     },
     "homepage": "https://github.com/JayJayc/Pikku#readme",
     "dependencies": {
+        "@apollo/react-components": "^3.1.5",
+        "@apollo/react-hooks": "^3.1.5",
+        "apollo-boost": "^0.4.7",
+        "apollo-cache-inmemory": "^1.6.5",
+        "apollo-client": "^2.6.8",
+        "apollo-link-http": "^1.5.17",
         "apollo-server-express": "^2.12.0",
         "cors": "^2.8.5",
         "graphql": "^15.0.0",
         "graphql-iso-date": "^3.6.1",
+        "graphql-tag": "^2.10.3",
         "graphql-type-json": "^0.3.1",
+        "install": "^0.13.0",
         "mongodb": "^3.5.6",
         "mongoose": "^5.9.10",
         "next": "^9.0.4",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "node-fetch": "^2.6.0",
+        "npm": "^6.14.4",
+        "react": "16.12.0",
+        "react-apollo": "^3.1.5",
+        "react-dom": "16.12.0",
         "serverless-nextjs-plugin": "^2.4.9"
     },
     "devDependencies": {
