--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
         "apollo-cache-inmemory": "^1.6.5",
         "apollo-client": "^2.6.8",
         "apollo-link-http": "^1.5.17",
+        "apollo-link-ws": "^1.0.20",
         "apollo-server-express": "^2.12.0",
         "cors": "^2.8.5",
+        "firebase": "^7.14.3",
+        "firebaseui": "^4.5.0",
         "graphql": "^15.0.0",
         "graphql-iso-date": "^3.6.1",
         "graphql-tag": "^2.10.3",
@@ -40,7 +43,8 @@
         "react": "16.12.0",
         "react-apollo": "^3.1.5",
         "react-dom": "16.12.0",
-        "serverless-nextjs-plugin": "^2.4.9"
+        "serverless-nextjs-plugin": "^2.4.9",
+        "subscriptions-transport-ws": "^0.9.16"
     },
     "devDependencies": {
         "serverless-next.js": "^1.9.8"
