--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@apollo/react-components": "^3.1.5",
         "@apollo/react-hooks": "^3.1.5",
+        "@brainhubeu/react-carousel": "^1.15.3",
         "apollo-boost": "^0.4.7",
         "apollo-cache-inmemory": "^1.6.5",
         "apollo-client": "^2.6.8",
@@ -43,6 +44,7 @@
         "react": "16.12.0",
         "react-apollo": "^3.1.5",
         "react-dom": "16.12.0",
+        "react-swing": "^2.0.0",
         "serverless-nextjs-plugin": "^2.4.9",
         "subscriptions-transport-ws": "^0.9.16"
     },
