--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "apollo-link-http": "^1.5.17",
         "apollo-link-ws": "^1.0.20",
         "apollo-server-express": "^2.12.0",
+        "autoprefixer": "^9.8.6",
         "cors": "^2.8.5",
         "firebase": "^7.14.3",
         "firebaseui": "^4.5.0",
@@ -41,6 +42,8 @@
         "next": "^9.0.4",
         "node-fetch": "^2.6.0",
         "npm": "^6.14.4",
+        "postcss-import": "^12.0.1",
+        "postcss-url": "^8.0.0",
         "react": "16.12.0",
         "react-apollo": "^3.1.5",
         "react-dom": "16.12.0",
